--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@ header {
   height: 80vh;
   overflow: hidden;
 
-  background: url("../images/Header.jpg") no-repeat center center/cover;
+  background: linear-gradient(rgba(22, 28, 55, 0.2), rgba(22, 28, 55, 0.4)),
+    url("../images/Header.jpg") no-repeat center center/cover;
   background-color: var(--dark-color);
 }
 
@@ -61,9 +62,8 @@ header {
   -webkit-box-shadow: 0 16px 24px 0 rgba(34, 60, 80, 0.15);
   box-shadow: 0 16px 24px 0 rgba(34, 60, 80, 0.15);
   padding: 0px 20px 0px 80px;
-  bottom: 12vh;
+  bottom: 6vh;
   margin: 0 auto;
-  left: -7%;
   width: 80%;
 }
 
@@ -124,7 +124,7 @@ header {
   bottom: 40px;
   z-index: -1;
   right: -22%;
-  left: -99999px;
+  left: -100%;
   border-radius: 5px;
 }
 
@@ -549,7 +549,12 @@ form input[type="submit"] {
     grid-template-columns: 450px;
     justify-content: center;
   }
-
+  .courses-grid::before {
+    right: 0;
+  }
+  .grid-card {
+    margin: 0 30px;
+  }
   .grid-card.multi {
     width: auto;
   }
@@ -557,7 +562,7 @@ form input[type="submit"] {
   .step {
     flex-direction: column;
     align-items: flex-start;
-    max-width: 500px;
+    width: 100%;
   }
 
   .reason {
